--- a/css/input.scss
+++ b/css/input.scss
@@ -1,14 +1,13 @@
-$primary-color: #1a528d;
-$secondary-color: #777777;
-$gray-color: #d5d5d5;
+$primary-color: #134880;
+$secondary-color: #484A4C;
+$gray-color: #DDDDDD;
 $width: 1200px;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
 }
 
 .wrapper {
@@ -30,11 +29,30 @@ body {
 
         .header {
             width: 100%;
-            background-color: $gray-color;
-            height: 20%;
-            color: $gray-color;
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
+            height: 100px;
+            display: flex;
+            column-gap: calc(940px - 621px - 301px);
+
+            .header-left {
+                border-radius: 0px 0px 5px 5px;
+                color: $gray-color;
+                background-color: $gray-color;
+                width: 301px;
+            }
+
+            .header-right {
+                border-radius: 0px 0px 5px 5px;
+                color: $gray-color;
+                background-color: $gray-color;
+                font-family: 'Helvetica Neue';
+                font-size: 15px;
+                line-height: 18px;
+                width: 621px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
         }
 
         .outer-slider-container {
@@ -56,7 +74,7 @@ body {
                 direction: rtl;
 
                 .slider-row-upper {
-                    height: 180px;
+                    height: 200px;
                     overflow: hidden;
 
                         .slider-row-upper-inner {
@@ -75,7 +93,7 @@ body {
                     display: flex;  
                     justify-content: flex-start;   
                     align-items: center;
-                    height: 180px;
+                    height: 200px;
                 
                 .slider-row-lower {
                         height: 100%;
@@ -107,12 +125,13 @@ body {
                         border-color: $primary-color;
                         border: 1px solid;
                         border-radius: 5px;
-                        padding: 15px 18px;
+                        width: 60px;
+                        height: 60px;
                         transition: all 0.1s ease-in-out;
                         
 
                         img {
-                            height: 15px;
+                            height: 16px;
                         }
 
                         &:hover {
@@ -130,19 +149,22 @@ body {
                 flex-direction: column;
                 justify-content: top;
                 align-items: flex-start;
-                row-gap: 5px;
 
                 h2 {
                     margin: 0;
                     color: $primary-color;
-                    font-weight: bold;
+                    font-family: 'Source Sans Pro';
+                    font-size: 32px;
+                    line-height: 38px;
                 }
 
                 p {
                     color: $secondary-color;
+                    font-family: 'Source Sans Pro';
                     font-size: 16px;
                     font-weight: 400;
-                    line-height: 1.3;
+                    line-height: 26px;
+                    font-size: 18px;
                 }
             }
         }
@@ -151,10 +173,13 @@ body {
     .footer {
         background-color: $gray-color;
         width: 100%;
-        height: 20%;
+        height: 100px;
         color: $gray-color;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
+        border-radius: 0px 0px 5px 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
 
