--- a/css/output.css
+++ b/css/output.css
@@ -1,8 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
 }
 
 .wrapper {
@@ -24,11 +23,28 @@ body {
 }
 .wrapper .container .header {
   width: 100%;
-  background-color: #d5d5d5;
-  height: 20%;
-  color: #d5d5d5;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  height: 100px;
+  display: flex;
+  column-gap: 18px;
+}
+.wrapper .container .header .header-left {
+  border-radius: 0px 0px 5px 5px;
+  color: #DDDDDD;
+  background-color: #DDDDDD;
+  width: 301px;
+}
+.wrapper .container .header .header-right {
+  border-radius: 0px 0px 5px 5px;
+  color: #DDDDDD;
+  background-color: #DDDDDD;
+  font-family: "Helvetica Neue";
+  font-size: 15px;
+  line-height: 18px;
+  width: 621px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .wrapper .container .outer-slider-container {
   display: flex;
@@ -48,7 +64,7 @@ body {
   direction: rtl;
 }
 .wrapper .container .outer-slider-container .slider-container .slider-row-upper {
-  height: 180px;
+  height: 200px;
   overflow: hidden;
 }
 .wrapper .container .outer-slider-container .slider-container .slider-row-upper .slider-row-upper-inner {
@@ -64,7 +80,7 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 180px;
+  height: 200px;
 }
 .wrapper .container .outer-slider-container .lower-slider-container .slider-row-lower {
   height: 100%;
@@ -89,16 +105,17 @@ body {
   width: 10%;
 }
 .wrapper .container .outer-slider-container .lower-slider-container .buttons-container button {
-  color: #1a528d;
+  color: #134880;
   background-color: transparent;
-  border-color: #1a528d;
+  border-color: #134880;
   border: 1px solid;
   border-radius: 5px;
-  padding: 15px 18px;
+  width: 60px;
+  height: 60px;
   transition: all 0.1s ease-in-out;
 }
 .wrapper .container .outer-slider-container .lower-slider-container .buttons-container button img {
-  height: 15px;
+  height: 16px;
 }
 .wrapper .container .outer-slider-container .lower-slider-container .buttons-container button:hover {
   border-color: #dedede;
@@ -111,26 +128,32 @@ body {
   flex-direction: column;
   justify-content: top;
   align-items: flex-start;
-  row-gap: 5px;
 }
 .wrapper .container .outer-slider-container .text-container h2 {
   margin: 0;
-  color: #1a528d;
-  font-weight: bold;
+  color: #134880;
+  font-family: "Source Sans Pro";
+  font-size: 32px;
+  line-height: 38px;
 }
 .wrapper .container .outer-slider-container .text-container p {
-  color: #777777;
+  color: #484A4C;
+  font-family: "Source Sans Pro";
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.3;
+  line-height: 26px;
+  font-size: 18px;
 }
 .wrapper .footer {
-  background-color: #d5d5d5;
+  background-color: #DDDDDD;
   width: 100%;
-  height: 20%;
-  color: #d5d5d5;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  height: 100px;
+  color: #DDDDDD;
+  border-radius: 0px 0px 5px 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
